# nexus-cog-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  completion.rs  config.rs  ctx.rs  format.rs  lib.rs  mcp.rs  repl.rs
src/commands/: antifragile.rs  backup.rs  brain.rs  causal.rs  cognitive.rs  common.rs  config.rs  decay.rs  embedder.rs  intel.rs  intent.rs  mod.rs  palace.rs  patterns.rs  provenance.rs  tests.rs
src/commands/brain/: decision_matrix.rs
src/commands/intent/: drift_detector.rs
