[package]
name = "nexus-cog-cli"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Command-line interface for the Nexus Cog cognitive stack"
license = "Apache-2.0"
repository = "https://github.com/nexus-cognitive-tech/nexus-cog-cli"
homepage = "https://github.com/nexus-cognitive-tech"
authors = ["Nexus Cognitive Technologies"]
keywords = ["cli", "cognition", "agent"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
nexus-cog-core = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-core", tag = "v0.1.0" }
nexus-cog-storage = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-storage", tag = "v0.1.0" }
nexus-cog-embeddings = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-embeddings", tag = "v0.1.1" }
nexus-cog-palace = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-palace", tag = "v0.2.0" }
nexus-cog-brain = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-brain", tag = "v0.1.0" }
nexus-cog-cognitive = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-cognitive", tag = "v0.1.0" }
nexus-cog-causal = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-causal", tag = "v0.2.1" }
nexus-cog-patterns = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-patterns", tag = "v0.1.0" }
nexus-cog-provenance = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-provenance", tag = "v0.2.2" }
nexus-cog-intel = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-intel", tag = "v0.3.0" }
nexus-cog-intent = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-intent", tag = "v0.2.0" }
nexus-cog-antifragile = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-antifragile", tag = "v0.1.0" }

clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env"] }
clap_complete = "4"
clap-verbosity-flag = "3"
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
toml = "0.8"
directories = "5"
is-terminal = "0.4"
owo-colors = { version = "4", features = ["supports-colors"] }
rustyline = { version = "14", features = ["with-file-history"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
rmcp = { version = "2.1", features = ["server", "macros", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nexus-cog"
path = "src/bin/nexus-cog.rs"
