[package]
name = "nexus-cog-cli"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
description = "Command-line interface for the Nexus Cog cognitive stack"
license = "Apache-2.0"
repository = "https://github.com/nexus-cognitive-tech/nexus-cog-cli"
homepage = "https://github.com/nexus-cognitive-tech"
authors = ["Nexus Cognitive Technologies"]
keywords = ["cli", "cognition", "agent"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
nexus-cog-core = { path = "../nexus-cog-core", version = "0.1.0" }
nexus-cog-storage = { path = "../nexus-cog-storage", version = "0.1.0" }
nexus-cog-embeddings = { path = "../nexus-cog-embeddings", version = "0.1.0" }
nexus-cog-neural = { path = "../nexus-cog-neural", version = "0.1.0" }
nexus-cog-causal = { path = "../nexus-cog-causal", version = "0.2.0" }
nexus-cog-patterns = { path = "../nexus-cog-patterns", version = "0.1.0" }
nexus-cog-provenance = { path = "../nexus-cog-provenance", version = "0.2.0" }
nexus-cog-antifragile = { path = "../nexus-cog-antifragile", version = "0.1.0" }

# ─── Dev-cycle overrides ───────────────────────────────────────────────────
# Every engine crate is a `path` dependency in this manifest, so no
# `[patch]` block is required. To restore upstream git deps for a release
# build, swap the `path =` lines above back to `git = "..."` with the
# appropriate `tag`.
# ────────────────────────────────────────────────────────────────────────────

clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env"] }
clap_complete = "4"
clap-verbosity-flag = "3"
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
toml = "0.8"
directories = "5"
is-terminal = "0.4"
owo-colors = { version = "4", features = ["supports-colors"] }
rustyline = { version = "14", features = ["with-file-history"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
rmcp = { version = "2.1", features = ["server", "macros", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
sha2 = "0.10"
regex = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nexus-cog"
path = "src/bin/nexus-cog.rs"
